fixed overflow for app

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,10 @@
 .App {
   text-align: center;
   margin: 0 auto;
-  height: 100%;
-  width: 100%;
+  max-width: 100%;
+  width: 100;
+  height: 100;
+  overflow-x: hidden
 }
 
 .App-logo {
