--- a/src/styles/screens/Projects.css
+++ b/src/styles/screens/Projects.css
@@ -1,6 +1,3 @@
 #projects {
-  display: flex;
-  flex-flow: column;
-  align-items: center;
-  justify-content: center;
+  background: radial-gradient( #D7DDE8 5%, #ffffff 95%);
 }
