--- a/src/styles/screens/Skills.css
+++ b/src/styles/screens/Skills.css
@@ -1,3 +1,7 @@
 i {
   font-size: 5rem;
 }
+
+#skills {
+  background: linear-gradient(to right, #D7DDE8 5%, #ffffff 95%);
+}
